Comprobación de procesos antes de creación de matchs