@@ -1,17 +1,16 @@
 package com.main.skillexchangeapi.application.services;
 
-import com.main.skillexchangeapi.app.requests.AsignacionModalidadPagoToServicioRequest;
-import com.main.skillexchangeapi.app.requests.AsignacionRecursoMultimediaToServicioRequest;
-import com.main.skillexchangeapi.app.responses.ModalidadPagoAsignadoToServicioResponse;
-import com.main.skillexchangeapi.app.responses.RecursosMultimediaAsignadoToServicioResponse;
+import com.main.skillexchangeapi.app.requests.servicio.AsignacionModalidadPagoToServicioRequest;
+import com.main.skillexchangeapi.app.requests.servicio.AsignacionRecursoMultimediaToServicioRequest;
+import com.main.skillexchangeapi.app.requests.servicio.CreateServicioBody;
+import com.main.skillexchangeapi.app.responses.servicio.*;
 import com.main.skillexchangeapi.app.utils.UuidManager;
 import com.main.skillexchangeapi.domain.abstractions.repositories.IModalidadPagoRepository;
 import com.main.skillexchangeapi.domain.abstractions.repositories.IRecursoMultimediaServicioRepository;
 import com.main.skillexchangeapi.domain.abstractions.repositories.IServicioRepository;
 import com.main.skillexchangeapi.domain.abstractions.services.IServicioService;
-import com.main.skillexchangeapi.domain.entities.ModalidadPago;
-import com.main.skillexchangeapi.domain.entities.RecursoMultimediaServicio;
-import com.main.skillexchangeapi.domain.entities.Servicio;
+import com.main.skillexchangeapi.domain.entities.*;
+import com.main.skillexchangeapi.domain.entities.detail.SkillUsuario;
 import com.main.skillexchangeapi.domain.exceptions.DatabaseNotWorkingException;
 import com.main.skillexchangeapi.domain.exceptions.NotCreatedException;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,12 +32,33 @@ public class ServicioService implements IServicioService {
     private IRecursoMultimediaServicioRepository recursoMultimediaServicioRepository;
 
     @Override
-    public Servicio registrar(Servicio servicio) throws DatabaseNotWorkingException, NotCreatedException {
-        return repository.registrar(servicio);
+    public ServicioRegisteredResponse registrar(CreateServicioBody requestBody) throws DatabaseNotWorkingException, NotCreatedException {
+        Servicio servicioRegistered = repository.registrar(Servicio.builder()
+                .titulo(requestBody.getTitulo())
+                .descripcion(requestBody.getDescripcion())
+                .precio(requestBody.getPrecio())
+                .skillUsuario(SkillUsuario.builder()
+                        .usuario(Usuario.builder()
+                                .id(requestBody.getIdUsuario())
+                                .build())
+                        .skill(Skill.builder()
+                                .id(requestBody.getIdSkill())
+                                .build())
+                        .build())
+                .build());
+
+        return ServicioRegisteredResponse.builder()
+                .id(servicioRegistered.getId())
+                .titulo(servicioRegistered.getTitulo())
+                .descripcion(servicioRegistered.getDescripcion())
+                .precio(servicioRegistered.getPrecio())
+                .idSkill(servicioRegistered.getSkillUsuario().getSkill().getId())
+                .idUsuario(servicioRegistered.getSkillUsuario().getUsuario().getId())
+                .build();
     }
 
     @Override
-    public List<ModalidadPagoAsignadoToServicioResponse> asignarModalidadesPago(UUID id, List<AsignacionModalidadPagoToServicioRequest> requestBody) throws DatabaseNotWorkingException, NotCreatedException {
+    public ServicioModalidadesPagoAsignadosResponse asignarModalidadesPago(UUID id, List<AsignacionModalidadPagoToServicioRequest> requestBody) throws DatabaseNotWorkingException, NotCreatedException {
         List<ModalidadPago> modalidadesPago = requestBody.stream().map(m -> ModalidadPago.builder()
                         .id(UuidManager.randomUuid())
                         .tipo(m.getTipo())
@@ -48,20 +68,21 @@ public class ServicioService implements IServicioService {
                         .numeroCelular(m.getNumeroCelular())
                         .build())
                 .collect(Collectors.toList());
-        List<ModalidadPago> modalidadesPagoRegistered = modalidadPagoRepository.registrarMultiple(modalidadesPago);
 
-        return modalidadesPagoRegistered.stream().map(m -> ModalidadPagoAsignadoToServicioResponse.builder()
-                        .idServicio(m.getId())
-                        .tipo(m.getTipo())
-                        .idServicio(m.getServicio().getId())
-                        .cuentaBancaria(m.getCuentaBancaria())
-                        .numeroCelular(m.getNumeroCelular())
-                        .build())
-                .collect(Collectors.toList());
+        return ServicioModalidadesPagoAsignadosResponse.builder()
+                .id(id)
+                .modalidadesPagoAsignado(modalidadPagoRepository.registrarMultiple(modalidadesPago).stream().map(m ->
+                        ModalidadPagoAsignado.builder()
+                                .id(m.getId())
+                                .tipo(m.getTipo())
+                                .cuentaBancaria(m.getCuentaBancaria())
+                                .numeroCelular(m.getNumeroCelular())
+                                .build()).toList())
+                .build();
     }
 
     @Override
-    public List<RecursosMultimediaAsignadoToServicioResponse> asignarRecursosMultimedia(UUID id, List<AsignacionRecursoMultimediaToServicioRequest> requestBody) throws DatabaseNotWorkingException, NotCreatedException {
+    public ServicioRecursosMultimediaAsignadosResponse asignarRecursosMultimedia(UUID id, List<AsignacionRecursoMultimediaToServicioRequest> requestBody) throws DatabaseNotWorkingException, NotCreatedException {
         List<RecursoMultimediaServicio> recursosMultimediaServicio = requestBody.stream().map(r -> RecursoMultimediaServicio.builder()
                         .id(UuidManager.randomUuid())
                         .medio(r.getMedio())
@@ -72,14 +93,15 @@ public class ServicioService implements IServicioService {
                         .build())
                 .collect(Collectors.toList());
 
-        List<RecursoMultimediaServicio> recursosMultimediaServicioRegistered = recursoMultimediaServicioRepository.registrarMultiple(recursosMultimediaServicio);
-
-        return recursosMultimediaServicioRegistered.stream().map(r -> RecursosMultimediaAsignadoToServicioResponse.builder()
-                        .id(r.getId())
-                        .url(r.getUrl())
-                        .medio(r.getMedio())
-                        .idServicio(r.getServicio().getId())
-                        .build())
-                .collect(Collectors.toList());
+        return ServicioRecursosMultimediaAsignadosResponse.builder()
+                .id(id)
+                .recursosMultimediaAsignados(recursoMultimediaServicioRepository.registrarMultiple(recursosMultimediaServicio).stream().map(r ->
+                                RecursoMultimediaAsignado.builder()
+                                        .id(r.getId())
+                                        .url(r.getUrl())
+                                        .medio(r.getMedio())
+                                        .build())
+                        .toList())
+                .build();
     }
 }
